style.css
body {
  background-color: #FEFEFA;
}

#main-container {
  color: #3A4957;
}

.custom-font {
  font-family: 'Cousine', monospace;
  color: #3A4957;
}

.section--center {
  max-width: 960px;
}

a {
  text-decoration: none;
}

.project {
  /*background-color: #FAEBD7;*/
  width: 90%;
}

.project h2 {
  font-weight: 700;
  font-size: 1.25rem;
  color: #3A4957;
}

.project p,
.project li {
  width: 100%;
  font-size: 0.75rem;
  color: #3A4957;
  /*font-family: "Roboto","Helvetica","Arial",sans-serif;*/
}

.project li {
  margin: 0 auto;
}

.main-logo-mobile {
  display: block;
  padding-top: 2rem;
}

.main-logo-mobile-name {
  font-size: 2rem;
  margin: 0 auto;
  text-align: center;
}


.links a {
  color: #1BA1EE;
  text-decoration: none;
  cursor: pointer;
}

.mdl-layout__header {
  background-color: transparent;
  color: #3A4957;
}

#main-nav a {
  color: #3A4957;
  cursor: pointer;
}

.currently {
  width: 90%;
}

.work-heading {
  font-size: 2rem;
  padding-left: 2%;
}

.mdl-card__title {
  color: #fff;
  width: 100%;
  /*height: 200px;*/
  background-size: 100%;
  background-repeat: no-repeat;
}

.mdl-card__project-copy li {
  display: none;
}

.mdl-card img {
  width: 100%;
}

#footer-nav {
  background-color: transparent;
  position: fixed;
  bottom: 5%;
  right: 7%;
  z-index: 10;
  color: #FAEBD7;
}

.footer-nav--btn {
  min-width: 42px;
  min-height: 42px;
}

#mdl-menu-top-right {
  background-color: rgba(0, 0, 0, 0.4);
}

.mdl-mini-footer__right-section button {
  background-color: transparent;
}

#contact-bg-cover {
  display: none;
  background: rgba(0, 0, 0, 0.7);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow-y: scroll;
  z-index: 10000;
}

#contact {
  max-width: 60%;
  position: fixed;
  bottom: 10%;
  left: 20%;
  right: 20%;
  display: none;
  padding: 2%;
  background: white;
  opacity: 0;
  overflow: hidden;
  z-index: 11000;
}

#contact-close {
  top: 10px;
  right: 10px;
  position: absolute;
  color: #3A4957;
  font-size: 2rem;
  font-weight: 100;
  cursor: pointer;
}

.contact-textfield {
  width: 95%;
  display: block;
  margin: 0 auto;
}

.form-submit {
  padding: 5px 40px;
  margin-left: 2.5%;
  display: block;
  border: 1px solid rgb(58, 73, 87);
  background: rgba(198, 207, 209, 0.6);
  font-size: 1rem;
  outline: none;
  cursor: pointer;
  color: #3A4957;
}

.form-submit:hover {
  background-color: rgb(58, 73, 87);
  border: 1px solid #FAEBD7;
  color: #FAEBD7;
}

.main-logo {
  width: 80%;
}

.main-logo span {
  font-weight: 300;
}

.main-logo-heading-name {
  /*  margin: 0 auto;*/
  font-size: 4rem;
  font-weight: 700;
}

.main-logo-h2-cursor {
  /*animation: blink-caret 1s step-end infinite;  */
  /*font-size: 0.4rem;*/
  vertical-align: middle;
}


.typed-cursor{
    font-size: 2.3rem;
    padding-top: 0.4rem;
    opacity: 0;
    -webkit-animation: blink 0.7s 8;
    -moz-animation: blink 0.7s 8;
    animation: blink 0.7s 8;
    animation-fill-mode: forwards;
}
@keyframes blink{
    0% { opacity:0; }
    50% { opacity:1; }
    100% { opacity:0; }
}
@-webkit-keyframes blink{
    0% { opacity:0; }
    50% { opacity:1; }
    100% { opacity:0; }
}
@-moz-keyframes blink{
    0% { opacity:0; }
    50% { opacity:1; }
    100% { opacity:0; }
}

.mdl-menu__item a,
.mdl-menu__item li {
  text-decoration: none;
  color: #3A4957;
}

@media only screen and (min-width: 500px) {
  .work-heading {
    padding-left: 7%;
  }
}


/*Large Screen*/

@media only screen and (min-width: 1024px) {
  #main-nav a {
    font-size: 1.25rem;
    padding-top: 0.25rem;
  }
  .links a:hover,
  #main-nav a:hover {
    background-color: rgb(58, 73, 87);
    color: #FAEBD7;
  }
  .work-heading {
    font-size: 2.5rem;
  }
  .main-logo {
    width: 40%;
    margin-top: 4%;
  }

  .main-logo-mobile {
    display: none;
  }
    letter-spacing: .15em;
  }
  .project {
    width: 100%;
  }
  .currently p {
    font-size: 1.75rem;
    line-height: 4rem;
    margin-top: 5rem;
  }
  .currently-status p {
    margin-top: 3rem;
  }
  .project p,
  .project li {
    width: 80%;
    font-size: 1rem;
  }
  .currently-status {
    margin-bottom: 10rem;
  }
}

